# liteparse-paddle

./: .SRCINFO  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  Dockerfile  PKGBUILD  README.md  compose.yaml  install.sh  package.json  portless.json
docs/: upgrade.md
docs/agents/: domain.md
liteparse-paddle-bin/: .SRCINFO  PKGBUILD
python/: Dockerfile  README.md  pyproject.toml  server.py  test_server.py
server/: Dockerfile  package.json  vitest.config.ts
server/src/: utils.ts
src/: main.rs
tests/: benchmark.sh  cold_start.sh  runner.sh  stability.sh  test_compose.sh  test_env.sh  test_install_path.sh  test_model_bake.sh  test_rename.sh  test_version_bump.sh  test_version_pins.sh
