[package]
name = "liteparse-server"
version = "0.1.0"
edition = "2021"

[dependencies]
liteparse = { version = "2", default-features = false }
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
tower-http = { version = "0.6", features = ["cors"] }
